--- a/pom.xml
+++ b/pom.xml
@@ -26,10 +26,10 @@
 <!--        </dependency>-->
 
         <!-- JSP 템플릿 엔진 -->
-<!--        <dependency>-->
-<!--            <groupId>org.apache.tomcat.embed</groupId>-->
-<!--            <artifactId>tomcat-embed-jasper</artifactId>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-jasper</artifactId>
+        </dependency>
 
         <!-- JSTL -->
         <dependency>
